Adição do logotipo e do background color.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
+    <header>
+        <button>menu</button>
+        <img src="./img/logo.svg">
+        <button>notificação</button>
+    </header>
 </body>
 
 </html>
