--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HZC | Home</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header>
-        <button>menu</button>
-        <img src="./img/logo.svg">
-        <button>notificação</button>
+    <header class="cabecalho">
+        <button class="cabecalho-menu">menu</button>
+        <img src="./img/logo.svg" alt="Logotipo da HZC" class="cabecalho-logo">
+        <button class="cabecalho-notificacao">notificação</button>
     </header>
 </body>
 
