--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <header class="cabecalho">
-        <button class="cabecalho-menu">menu</button>
+        <button class="cabecalho-menu"> <i></i> </button>
         <img src="./img/logo.svg" alt="Logotipo da HZC" class="cabecalho-logo">
-        <button class="cabecalho-notificacao">notificação</button>
+        <button class="cabecalho-notificacao"> <i></i> </button>
     </header>
 </body>
 
