Adição dos links de menu lateral (somente em texto).

--- a/index.html
+++ b/index.html
@@ -15,10 +15,19 @@
 
 <body>
     <header class="cabecalho">
-        <button class="cabecalho-menu"> <i></i> </button>
+        <button class="cabecalho-menu" area-label="Menu"> <i></i> </button>
         <img src="./img/logo.svg" alt="Logotipo da HZC" class="cabecalho-logo">
-        <button class="cabecalho-notificacao"> <i></i> </button>
+        <button class="cabecalho-notificacao" area-label="Notificação"> <i></i> </button>
     </header>
+<nav class="menu-lateral">
+    <img src="./img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
+    <a href="#" class="menu-lateral__link menu-lateral__link--inicio">Início</a>
+    <a href="#" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
+    <a href="#" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
+    <a href="#" class="menu-lateral__link menu-lateral__link--integrantes">Integrantes</a>
+    <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
+    <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
+</nav>
 </body>
 
 </html>
