--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <img src="./img/logo.svg" alt="Logotipo da HZC" class="cabecalho-logo">
         <button class="cabecalho-notificacao" area-label="Notificação"> <i></i> </button>
     </header>
-<nav class="menu-lateral">
-    <img src="./img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
-    <a href="#" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
-    <a href="#" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
-    <a href="#" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
-    <a href="#" class="menu-lateral__link menu-lateral__link--integrantes">Integrantes</a>
-    <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
-    <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
-</nav>
+    <nav class="menu-lateral menu-lateral--ativo">
+        <img src="./img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
+        <a href="#" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--integrantes">Integrantes</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
+    </nav>
 </body>
 
 </html>
