--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap">
 </head>
+
 <body>
     <header class="cabecalho">
         <button class="cabecalho-menu" area-label="Menu"> <i></i> </button>
@@ -27,6 +28,20 @@
         <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
     </nav>
+    <main>
+        <h2 class="titulo-pagina">Início</h2>
+        <article class="cartao">
+            <img src="./img/banner-mobile_1.png" alt="Banner do cartão" class="carta-imagem">
+            <div class="cartao-conteudo">
+                <p class="cartao-destaque">Vídeo em destaque</p>
+                <h3 class="cartao-titulo">HZC Título</h3>
+                <p class="cartao-perfil"> Bruno Lopes</p>
+                <p class="cartao-info cartao-info--tempo">33 minutos</p>
+                <p class="cartao-info cartao-info--visualizacao">33 visualizações</p>
+                <button class="cartao-botao cartao-botao--destaque">Assistir agora</button>
+            </div>
+        </article>
+    </main>
 </body>
 
 </html>
