Adição de textos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="./img/logo.svg" alt="Logotipo da HZC" class="cabecalho-logo">
         <button class="cabecalho-notificacao" area-label="Notificação"> <i></i> </button>
     </header>
-    <nav class="menu-lateral menu-lateral--ativo">
+    <nav class="menu-lateral">
         <img src="./img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
         <a href="#" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
@@ -28,6 +28,7 @@
         <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
     </nav>
+    <script src="./scripts.js"></script>
     <main>
         <h2 class="titulo-pagina">Início</h2>
         <article class="cartao">
@@ -38,7 +39,7 @@
                 <p class="cartao-perfil"> Bruno Lopes</p>
                 <p class="cartao-info cartao-info--tempo">33 minutos</p>
                 <p class="cartao-info cartao-info--visualizacao">33 visualizações</p>
-                <button class="cartao-botao cartao-botao--destaque">Assistir agora</button>
+                <button class="cartao-botao cartao-botao--play cartao-botao--destaque">Assistir agora</button>
             </div>
         </article>
     </main>
