--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <h2 class="titulo-pagina">Início</h2>
         <article class="cartao">
-            <img src="./img/banner-mobile_1.png" alt="Banner do cartão" class="carta-imagem">
+            <img src="./img/banner-mobile_1.png" alt="Banner do cartão" class="cartao-imagem">
             <div class="cartao-conteudo">
                 <p class="cartao-destaque">Vídeo em destaque</p>
                 <h3 class="cartao-titulo">HZC Título</h3>
